// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseFlex /> should have margin-bottom and margin-top not equal 0px 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  margin-bottom: 51px;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 51px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
}

<body>
  <div>
    <div
      class="c0"
      data-margin-bottom="51px"
      data-margin-left="0px"
      data-margin-right="0px"
      data-margin-top="51px"
      data-padding-bottom="0px"
      data-padding-left="0px"
      data-padding-right="0px"
      data-padding-top="0px"
    />
  </div>
</body>
`;

exports[`<BaseFlex /> should have the basic css settings 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  margin-bottom: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
}

<body>
  <div>
    <div
      class="c0"
      data-margin-bottom="0px"
      data-margin-left="0px"
      data-margin-right="0px"
      data-margin-top="0px"
      data-padding-bottom="0px"
      data-padding-left="0px"
      data-padding-right="0px"
      data-padding-top="0px"
    />
  </div>
</body>
`;
